<resources>
    <string name="app_name">Assignment_2</string>
    <string name="welcome_to_bitcode">Welcome to Bitcode</string>
    <string name="enquiry_form">Enquiry Form</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email_id">Email ID</string>
    <string name="address">Address</string>
    <string name="college_name">College Name</string>
    <string name="year_of_passing">Year of Passing</string>
</resources>